# bot.io

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
mathparser/: Cargo.toml
mathparser/src/: ast.rs  errors.rs  eval.rs  grammar.lalrpop  lib.rs
migrations/2020-04-29-205350_create_problems/: up.sql
migrations/2020-06-12-222606_create_chosen_problems/: down.sql  up.sql
src/: config.rs  db.rs  errors.rs  eval.rs  interactive.rs  main.rs  models.rs  problem.rs  reactions.rs  schema.rs
src/admin/: mod.rs  new_problem.rs
