[package]
name = "iobot"
version = "0.1.0"
authors = ["Jakub Kądziołka <kuba@kadziolka.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
diesel = { version = "1.0", features = ["postgres", "r2d2"] }
diesel-derive-newtype = "0.1"
dotenv = "0.9"
env_logger = "0.7"
log = "0.4"
mathparser = { path = "mathparser" }
r2d2 = "0.8"
serde = "1"
serenity = "0.8"
toml = "0.5"

[workspace]
members = [
    "mathparser",
]
