[package]
name = "iobot"
version = "0.1.0"
authors = ["Jakub Kądziołka <kuba@kadziolka.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ctrlc = { version = "3.1.4", features = ["termination"] }
diesel = { version = "1.0", features = ["postgres", "r2d2"] }
diesel-derive-newtype = "0.1"
dotenv = "0.9"
env_logger = "0.7"
enum-map = "0.6.2"
extension-trait = "0.2.1"
genawaiter = "0.99"
ifmt = "0.3.0"
joinery = "2.0.0"
log = "0.4"
mathparser = { path = "mathparser" }
r2d2 = "0.8"
rental = "0.5.4"
serde = "1"
strum = "0.18.0"
strum_macros = "0.18.0"
toml = "0.5"

[dependencies.serenity]
git = "https://github.com/NieDzejkob/serenity"
branch = "return-reaction"

[workspace]
members = [
    "mathparser",
]
